--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,3 +20,9 @@
 .svg-image.filled {
     fill: currentColor;
 }
+
+.tippy-box {
+    color: #F3EFF2 !important;
+    background-color: #4E3A4A !important;
+}
+
