--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,7 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;500;600;700&family=Poppins:ital,wght@0,200;0,300;0,500;0,600;0,700;0,800;1,300&display=swap");
+
 /*tailwind*/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+#app {
+    @apply h-full w-full;
+}
 
 html {
     -webkit-tap-highlight-color: transparent;
@@ -24,8 +32,8 @@ html {
 }
 
 .tippy-box {
-    color: #F3EFF2 !important;
-    background-color: #4E3A4A !important;
+    color: #f3eff2 !important;
+    background-color: #4e3a4a !important;
 }
 
 /* SCROLLBAR */
@@ -36,7 +44,7 @@ html {
     }
 
     * {
-        scrollbar-color: #091314 #93aca4 ;
+        scrollbar-color: #091314 #93aca4;
     }
 
     ::-webkit-scrollbar {
